// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional() should fail 1`] = `
Object {
  "message": "Either Value should equal to undefined OR Value should be a string",
  "path": Array [],
  "requirements": Array [
    Object {
      "message": "Value should equal to undefined",
      "path": Array [],
      "type": "single",
      "value": 1,
    },
    Object {
      "message": "Value should be a string",
      "path": Array [],
      "type": "single",
      "value": 1,
    },
  ],
  "type": "alternative",
  "value": 1,
}
`;

exports[`optional() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "requirements": Array [
    Object {
      "message": "Value should equal to undefined",
      "path": Array [],
      "type": "single",
      "value": null,
    },
    Object {
      "message": "Value should be a string",
      "path": Array [],
      "type": "single",
      "value": null,
    },
  ],
  "type": "alternative",
  "value": null,
}
`;
